@@ -1,17 +1,17 @@
 Package: oligo
-Version: 1.15.2
+Version: 1.15.3
 Title: Preprocessing tools for oligonucleotide arrays.
 Author: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>, Rafael A. Irizarry with contributions from Ben Bolstad, Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>
 Depends: R (>= 2.13.0),
          oligoClasses (>= 1.13.9)
-Imports: affyio (>= 1.19.2),
+Imports: affyio (>= 1.19.4),
          affxparser (>= 1.23.1),
          Biobase (>= 2.11.8),
          DBI (>= 0.2-5),
          graphics,
          methods,
-         preprocessCore (>= 1.13.4),
+         preprocessCore (>= 1.13.5),
          splines,
          stats,
          utils
